Section 2 - A Mini Microservices App/blog-boilerplate/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  # to access the application from outside the cluster we use NodePort 
  # or else it will be only accessible within the cluster. By default it is ClusterIP.
  type: NodePort
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
